--- a/01. 编程基础/数据结构/线性结构/03. 队列.md
+++ b/01. 编程基础/数据结构/线性结构/03. 队列.md
@@ -1,9 +1,170 @@
-自定义队列
+## 队列(Queue)，它是一种运算受限的线性表,先进先出(FIFO First In First Out)
 
-优先级队列
+- 队列是一种受限的线性结构
 
-队列的应用
+- 受限之处在于它只允许在表的前端（front）进行删除操作，而在表的后端（rear）进行插入操作
 
+## 自定义队列
 
+1. 基于数组实现
 
+```javaScript
+// 自定义队列
+class Queue{
+  constructor() {
+    this.items = []
+  }
 
+  // 队列操作的方法
+  // enter 向队列尾部添加一个（或多个）新的项
+  enqueue(element) {
+    this.items.push(element)
+  }
+
+  // delete 移除队列的第一（即排在队列最前面的）项，并返回被移除的元素
+  dequeue() {
+    return this.items.shift()
+  }
+
+  // 查看前端的元素
+  // 返回队列中第一个元素——最先被添加，也将是最先被移除的元素。队列不做任何变动
+  front() {
+    return this.items[0]
+  }
+
+  // 查看队列是否为空
+  isEmpty() {
+    return this.items.length === 0
+  }
+
+  // 查看队列中元素的个数
+  size() {
+    return this.items.length
+  }
+
+  toString() {
+    return this.items.map(item => Object(item).toString()).join("")
+  }
+}
+```
+
+2. 基于链表实现
+
+## 优先级队列
+
+1. 优先级队列的特点:
+
+- 普通的队列插入一个元素, 数据会被放在后端. 并且需要前面所有的元素都处理完成后才会处理前面的数据.
+- 但是优先级队列, 在插入一个元素的时候会考虑该数据的优先级.(和其他数据优先级进行比较)
+
+- 比较完成后, 可以得出这个元素正确的队列中的位置. 其他处理方式, 和队列的处理方式一样.
+
+- 也就是说, 如果要实现优先级队列, 最主要是要修改添加方法. (当然, 还需要以某种方式来保存元素的优先级)
+
+2. 优先级队列主要考虑的问题：
+
+- 每个元素不再只是一个数据，而且包含数据的优先级
+
+- 在添加方法中，根据优先级放入正确的位置
+
+## 优先级队列的实现
+
+实现优先级队列相对队列主要有两方面需要考虑:
+
+- 封装元素和优先级放在一起(可以封装一个新的构造函数)
+
+- 添加元素时, 将当前的优先级和队列中已经存在的元素优先级进行比较, 以获得自己正确的位置.
+
+```javaScript
+// 封装一个新的构造函数, 用于保存元素和元素的优先级
+class QueueElement {
+  constructor(element, priority) {
+    this.element = element
+    this.priority = priority
+  }
+}
+
+// 封装优先级队列
+class PriorityQueue extends Queue{
+  // 添加元素的方法
+  enqueue(element, priority) {
+    // 1.根据传入的元素, 创建新的QueueElement
+    let queueElement = new QueueElement(element, priority)
+
+    // 2.获取传入元素应该在正确的位置
+    if (this.isEmpty()) {
+      this.items.push(queueElement)
+    } else {
+      let added = false
+      this.items.forEach((item, index) => {
+        // 注意: 我们这里是数字越小, 优先级越高
+        if (queueElement.priority < item.priority) {
+          this.items.splice(index, 0, queueElement)
+          added = true
+          break
+        }
+      })
+
+      // 遍历完所有的元素, 优先级都大于新插入的元素时, 就插入到最后
+      if (!added) {
+        this.items.push(queueElement)
+      }
+    }
+  }
+}
+```
+
+代码解析:
+
+- 封装了一个QueueElement, 将element和priority封装在一起.
+
+- 在插入新的元素时, 有如下情况下考虑:
+
+  - 根据新的元素先创建一个新的QueueElement对象.
+
+  - 如果元素是第一个被加进来的, 那么不需要考虑太多, 直接加入数组中即可.
+
+  - 如果是后面加进来的元素, 需要和前面加进来的元素依次对比优先级.
+
+  - 一旦优先级, 大于某个元素, 就将该元素插入到元素这个元素的位置. 其他元素会依次向后移动.
+
+  - 如果遍历了所有的元素, 没有找到某个元素被这个新元素的优先级低, 直接放在最后即可.
+
+## 队列的应用
+
+1. 打印队列
+
+2. 线程队列
+
+3. 击鼓传花
+
+```javaScript
+// 实现击鼓传花的函数
+function passGame(nameList, num) {
+  // 1.创建一个队列, 并且将所有的人放在队列中
+  // 1.1.创建队列
+  let queue = new Queue()
+
+  // 1.2.通过循环, 将nameList中的人放在队列中
+  nameList.forEach(name => {
+    queue.enqueue(name)
+  })
+
+  // 2.寻找最后剩下的人
+  while (queue.size() > 1) {
+      // 将前num-1中的人, 都从队列的前端取出放在队列的后端
+      for (let i = 0; i < num - 1; i++) {
+          queue.enqueue(queue.dequeue())
+      }
+
+      // 将第num个人, 从队列中移除
+      queue.dequeue()
+  }
+
+  // 3.获取剩下的一个人
+  let endName = queue.front()
+
+  // 4.获取该人在队列中的位置
+  return nameList.indexOf(endName)
+}
+```
