--- a/01. 编程基础/数据结构/线性结构/04. 链表.md
+++ b/01. 编程基础/数据结构/线性结构/04. 链表.md
@@ -1,5 +1,222 @@
-链表原理
+链表和数组一样, 可以用于存储一系列的元素, 但是链表和数组的实现机制完全不同
 
-自定义链表
+## 链表和数组
 
-双向链表
+1. 数组:
+
+要存储多个元素，数组（或列表）可能是最常用的数据结构。
+
+几乎每一种编程语言都有默认实现数组结构, 这种数据结构非常方便，提供了一个便利的 `[]` 语法来访问它的元素。
+
+数组缺点:
+
+- 数组的创建通常需要申请一段连续的内存空间(一整块的内存), 并且大小是固定的(大多数编程语言数组都是固定的), 所以当当前数组不能满足容量需求时, 需要扩容. (一般情况下是申请一个更大的数组, 比如2倍. 然后将原数组中的元素复制过去)
+
+- 在数组开头或中间位置插入数据的成本很高, 需要进行大量元素的位移.（JavaScript的Array类方法背后的原理依然是这样）。
+
+2. 链表
+
+要存储多个元素, 另外一个选择就是使用链表. 但不同于数组, 链表中的元素在内存中不必是连续的空间.
+
+链表的每个元素由一个存储元素本身的节点和一个指向下一个元素的引用(有些语言称为指针或者链接)组成.
+
+相对于数组, 链表有一些优点:
+
+- 内存空间不是比是连续的. 可以充分利用计算机的内存. 实现灵活的内存动态管理.
+
+- 链表不必在创建时就确定大小, 并且大小可以无限的延伸下去.
+
+- 链表在插入和删除数据时, 时间复杂度可以达到O(1). 相对数组效率高很多.
+
+相对于数组, 链表有一些缺点:
+
+- 链表访问任何一个位置的元素时, 都需要从头开始访问.(无法跳过第一个元素访问任何一个元素).
+
+- 无法通过下标直接访问元素, 需要从头一个个访问, 直到找到对应的问题.
+
+## 链表原理
+
+## 自定义链表
+
+```javaScript
+// 封装一个Node类, 用于保存每个节点信息
+class Node {
+  constructor(element) {
+    this.element = element
+    this.next = null
+  }
+}
+
+// 封装链表的构造函数
+class LinkedList {
+  constructor() {
+    // 链表中的属性
+    this.length = 0
+    this.head = null
+  }
+
+  // 向列表尾部添加一个新的项
+  append(element) {
+    // 1.根据新元素创建节点
+    const newNode = new Node(element)
+
+    // 2.判断原来链表是否为空
+    if (this.head === null) { // 链表尾空
+      this.head = newNode
+    } else { // 链表不为空
+      // 2.1.定义变量, 保存当前找到的节点
+      let current = this.head
+      while (current.next) {
+          current = current.next
+      }
+
+      // 2.2.找到最后一项, 将其next赋值为node
+      current.next = newNode
+    }
+
+    // 3.链表长度增加1
+    this.length++
+  }
+
+  // 向列表的特定位置插入一个新的项
+  insert(position, element) {
+    // 1.检测越界问题: 越界插入失败
+    if (position < 0 || position > this.length) return false
+
+    // 2.定义变量, 保存信息
+    const newNode = new Node(element)
+    let current = this.head
+    let previous = null
+    index = 0
+
+    // 3.判断是否列表是否在第一个位置插入
+    if (position == 0) {
+        newNode.next = current
+        this.head = newNode
+    } else {
+        while (index++ < position) {
+            previous = current
+            current = current.next
+        }
+
+        newNode.next = current
+        previous.next = newNode
+    }
+
+    // 4.length+1
+    this.length++
+
+    return true
+  }
+
+  // 获取对应位置的元素
+  get(position) {
+    // 1.检测越界问题: 越界移除失败, 返回null
+    if (position < 0 || position > this.length - 1) return null
+
+    // 2. 查找该位置的元素
+    let index = 0
+    let current = this.head
+    while(index++ < position) {
+      current = current.next
+    }
+
+    return current.element
+  }
+
+  // 返回元素在列表中的索引。如果列表中没有该元素则返回-1
+  indexOf(element) {
+    // 1.定义变量, 保存信息
+    let current = this.head
+    index = 0
+
+    // 2.找到元素所在的位置
+    while (current) {
+      if (current.element === element) {
+        return index
+      }
+      index++
+      current = current.next
+    }
+
+    // 3.来到这个位置, 说明没有找到, 则返回-1
+    return -1
+  }
+
+  // 从列表的特定位置移除一项
+  removeAt(position) {
+    // 1.检测越界问题: 越界移除失败, 返回null
+    if (position < 0 || position > this.length - 1) return null
+
+    // 2.定义变量, 保存信息
+    let current = this.head
+    let previous = null
+    let index = 0
+
+    // 3.判断是否是移除第一项
+    if (position === 0) {
+      this.head = current.next
+    } else {
+      while (index++ < position) {
+        previous = current
+        current = current.next
+      }
+
+      previous.next = current.next
+    }
+
+    // 4.length-1
+    this.length--
+
+    // 5.返回移除的数据
+    return current.element
+  }
+
+  // 修改某个位置的元素
+  update(position, element) {
+    const result = this.removeAt(position)
+    this.insert(position, element)
+
+    return result
+  }
+
+  // 根据元素删除信息
+  remove(element) {
+    let index = this.indexOf(element)
+    return this.removeAt(index)
+  }
+
+  // 判断链表是否为空
+  isEmpty() {
+    return this.length == 0
+  }
+
+  // 获取链表的长度
+  size() {
+    return this.length
+  }
+
+  // 获取第一个节点
+  getFirst() {
+    return this.head.element
+  }
+
+  // 链表的toString方法
+  toString() {
+    // 1.定义两个变量
+    let current = this.head
+    let listString = ""
+
+    // 2.循环获取链表中所有的元素
+    while (current) {
+      listString += "," + current.element
+      current = current.next
+    }
+
+    // 3.返回最终结果
+    return listString.slice(1)
+  }
+}
+```
+
+## 双向链表
