--- a/01. 编程基础/数据结构/线性结构/04. 链表.md
+++ b/01. 编程基础/数据结构/线性结构/04. 链表.md
@@ -183,6 +183,7 @@ class LinkedList {
   // 根据元素删除信息
   remove(element) {
     let index = this.indexOf(element)
+    if(index === -1) return
     return this.removeAt(index)
   }
 
