--- a/01. 编程基础/数据结构/哈希表/03. 哈希表理论.md
+++ b/01. 编程基础/数据结构/哈希表/03. 哈希表理论.md
@@ -1,12 +1,28 @@
-哈希表介绍
+## 哈希表介绍
 
-认识哈希化
+1. 哈希表通常是基于数组进行实现的, 但是相对于数组, 哈希表有很多的优势:
 
-地址的冲突
+- 哈希表可以提供非常快速的插入-删除-查找操作
+
+- 无论多少数据, 插入和删除值需要接近常量的时间: 即O(1)的时间级. 实际上, 只需要几个机器指令即可
+
+- 哈希表的速度比树还要快, 基本可以瞬间查找到想要的元素
+
+- 哈希表相对于树来说编码要容易很多.
+
+哈希表相对于数组的一些不足:
+
+- 哈希表中的数据是没有顺序的, 所以不能以一种固定的方式(比如从小到大)来遍历其中的元素.
+
+- 通常情况下, 哈希表中的key是不允许重复的, 不能放置相同的key, 用于保存不同的元素.
+
+## 认识哈希化
+
+## 地址的冲突
   链地址法
   开放地址法
 
-哈希化效率
+## 哈希化效率
 
 
 
