自定义哈希表

--- a/01. 编程基础/数据结构/哈希表/04. 自定义哈希表.md
+++ b/01. 编程基础/数据结构/哈希表/04. 自定义哈希表.md
@@ -1,7 +1,252 @@
-哈希函数
+## 哈希函数
 
-哈希表实现
+1. 快速的计算，提高速度：让哈希函数中尽量少的有乘法和除法.
 
-哈希表扩容
+哈希表的优势在于效率，所有通过快速的计算获取到元素对应的 `hashCode` 非常重要
 
-容量质数
+多项式的优化: 霍纳法则（秦九韶算法）使用大O表示时间复杂度直接直接降到了 `O(N)`
+
+2. 均匀的分布
+
+哈希表中，无论是链地址法或者开放地址法，当多个元素映射到同一个位置时，都会影响效率
+
+所以优秀的哈希函数应该尽可能将元素映射到不同的位置，让元素在哈希表中均匀分布
+
+因此, 在需要使用常量的地方, 尽量使用质数（质数又称素数。一个大于 `1` 的自然数，除了 `1` 和它自身外，不能被其他自然数整除的数叫做质数；否则称为合数（规定1既不是质数也不是合数））
+
+3. 质数的使用
+
+- 哈希表的长度
+
+在开放地址法中的再哈希法中质数的重要性：探测序列不会产生循环, 而且可以让数据在哈希表中更加均匀的分布
+
+链地址法中质数没有那么重要, 甚至在 `Java` 中故意是 `2的N次幂`
+
+个人发现 `JavaScript` 中进行较大数据的位运算时会出问题, 所以代码实现中还是使用了取模
+
+- N次幂的底数
+
+N次幂的底数, 使用质数的原因是为了产生的数据不按照某种规律递增
+
+## 哈希表扩容
+
+1. 为什么需要扩容?
+
+因为目前实现哈希表使用的是链地址法, `loadFactor` 可以大于 `1`, 所以这个哈希表可以无限制的插入新数据.
+
+但是, 随着数据量的增多, 每一个 `index` 对应的 `bucket` 会越来越长, 也就造成效率的降低.
+所以, 在合适的情况对数组进行扩容. 
+
+2. 如何进行扩容?
+
+扩容可以简单的将容量增加大两倍(不是质数吗? 质数的问题后面再讨论)
+
+但是这种情况下, 所有的数据项一定要同时进行修改(重新哈希化, 来获取到不同的位置)
+
+比如hashCode=12的数据项, 在length=8的时候, index=4. 在长度为16的时候呢? index=12.
+
+这是一个耗时的过程, 但是如果数组需要扩容, 那么这个过程是必要的.
+
+3. 什么情况下扩容呢?
+
+比较常见的情况是 `loadFactor>0.75` 的时候进行扩容.
+
+比如Java的哈希表就是在装填因子大于 `0.75` 的时候, 对哈希表进行扩容.
+
+## 容量质数
+
+1. 判断质数
+
+质数表示大于 `1` 的自然数中, 只能被 `1` 和自己整除的数.
+
+## 哈希表实现
+
+采用链地址法来实现哈希表
+
+```javaScript
+// 创建HashTable构造函数
+class HashTable {
+  constructor() {
+    // 定义属性
+    this.storage = [] // 存放相关的元素
+    this.count = 0 // 当前已经存在了多少数据
+    this.limit = 7 // 标记数组中一共可以存放多少个元素
+  }
+
+  // 定义相关方法
+  /**
+   * 判断质数
+   * 一个数若可以进行因数分解，分解时得到的两个数一定是一个小于等于sqrt(n)，一个大于等于sqrt(n)
+   * 所以其实遍历到等于sqrt(n)即可
+   * */ 
+  isPrime(num) {
+    // 1.获取平方根
+    let temp = parseInt(Math.sqrt(num))
+
+    // 2.循环判断
+    for (let i = 2; i <= temp; i++) {
+      if (num % i === 0) {
+        return false
+      }
+    }
+
+    return true
+  }
+
+  // 获取质数
+  getPrime(num) {
+    while (!isPrime(num)) {
+        num++
+    }
+    return num
+  }
+
+  /**
+   * 哈希函数
+   * 1. 将字符串转成比较大的数字 hashCode
+   * 2. 将大的数字 hashCode 压缩到数组 length 范围之内
+   * */ 
+  hashFunc(str, max) {
+    // 1.初始化hashCode的值
+    let hashCode = 0
+
+    // 2.霍纳算法, 来计算hashCode的数值
+    for (let i = 0; i < str.length; i++) {
+        hashCode = 37 * hashCode + str.charCodeAt(i)
+    }
+  
+    // 3.取模运算
+    hashCode = hashCode % max
+    return hashCode
+  }
+
+  // 插入数据
+  put(key, value) {
+    // 1.获取key对应的index
+    const index = this.hashFunc(key, this.limit)
+
+    // 2.取出数组(也可以使用链表)
+    // // 数组中放置数据的方式: [[ [k,v], [k,v], [k,v] ] , [ [k,v], [k,v] ]  [ [k,v] ] ]
+    let bucket = this.storage[index]
+
+    // 3.判断这个数组是否存在
+    if (bucket === undefined) {
+        // 3.1创建桶
+        bucket = []
+        this.storage[index] = bucket
+    }
+    
+    // 4.判断是新增还是修改原来的值.
+    let override = false
+    for (let i = 0; i < bucket.length; i++) {
+        let tuple = bucket[i]
+        if (tuple[0] === key) {
+            tuple[1] = value
+            override = true
+        }
+    }
+    
+    // 5.如果是新增, 前一步没有覆盖
+    if (!override) {
+        bucket.push([key, value])
+        this.count++
+        // 数组扩容
+        if (this.count > this.limit * 0.75) {
+          let primeNum = this.getPrime(this.limit * 2)
+          this.resize(primeNum)
+        }
+    }
+  }
+
+  // 获取数据
+  get(key) {
+    // 1.获取key对应的index
+    let index = this.hashFunc(key, this.limit)
+
+    // 2.获取对应的bucket
+    let bucket = this.storage[index]
+
+    // 3.如果bucket为null, 那么说明这个位置没有数据
+    if (bucket == null) {
+        return null
+    }
+
+    // 4.有bucket, 判断是否有对应的key
+    for (let i = 0; i < bucket.length; i++) {
+        let tuple = bucket[i]
+        if (tuple[0] === key) {
+            return tuple[1]
+        }
+    }
+    
+    // 5.没有找到, return null
+    return null
+  }
+
+  // 删除数据
+  remove(key) {
+    // 1.获取key对应的index
+    let index = this.hashFunc(key, this.limit)
+    
+    // 2.获取对应的bucket
+    let bucket = this.storage[index]
+    
+    // 3.判断同是否为null, 为null则说明没有对应的数据
+    if (bucket == null) {
+        return null
+    }
+    
+    // 4.遍历bucket, 寻找对应的数据
+    for (let i = 0; i < bucket.length; i++) {
+        let tuple = bucket[i]
+        if (tuple[0] === key) {
+            bucket.splice(i, 1)
+            this.count--
+
+            // 缩小数组的容量
+            if (this.limit > 7 && this.count < this.limit * 0.25) {
+              let primeNum = this.getPrime(Math.floor(this.limit / 2))
+              this.resize(primeNum)
+            }
+        }
+        return tuple[1]
+    }
+    
+    // 5.来到该位置, 说明没有对应的数据, 那么返回null
+    return null
+  }
+
+  isEmpty() {
+    return this.count === 0
+  }
+
+  size() {
+    return this.count
+  }
+
+  // 哈希表扩容
+  resize = function (newLimit) {
+    // 1.保存旧的数组内容
+    let oldStorage = this.storage
+
+    // 2.重置属性
+    this.limit = newLimit
+    this.count = 0
+    this.storage = []
+
+    // 3.遍历旧数组中的所有数据项, 并且重新插入到哈希表中
+    oldStorage.forEach(bucket => {
+      // 1.bucket 为 null, 说明这里面没有数据
+      if (bucket === null) return
+
+      // 2.bucket中有数据, 那么将里面的数据重新哈希化插入
+      for (let i = 0; i < bucket.length; i++) {
+        let tuple = bucket[i]
+        this.put(tuple[0], tuple[1])
+      }
+    })
+  }
+
+}
+
+```
