--- a/01. 编程基础/数据结构/树结构/01. 树相关概念.md
+++ b/01. 编程基础/数据结构/树结构/01. 树相关概念.md
@@ -19,6 +19,7 @@
 - 链表:
 
 优点: 链表的插入和删除操作效率都很高.
+
 缺点:
 
 查找效率很低, 需要从头开始依次访问链表中的每个数据项, 直到找到.
@@ -49,63 +50,67 @@
 
 - 树的定义:
 
-树（Tree）: n（n≥0）个结点构成的有限集合。
+树（Tree）: `n（n≥0）`个节点构成的有限集合。
 
-当n=0时，称为空树；
+当 `n=0` 时，称为空树；
 
-对于任一棵非空树（n> 0），它具备以下性质：
+对于任一棵非空树（`n> 0`），它具备以下性质：
 
-树中有一个称为“根（Root）”的特殊结点，用 r 表示；
+树中有一个称为“根（Root）”的特殊节点，用 r 表示；
 
-其余结点可分为m(m>0)个互不相交的有限集T1，T2，... ，Tm，其中每个集合本身又是一棵树，称为原来树的“子树（SubTree）”
+其余节点可分为 `m(m>0)` 个互不相交的有限集 T1，T2，... ，Tm，其中每个集合本身又是一棵树，称为原来树的“子树（SubTree）”
 
 注意:
 
 子树之间不可以相交
 
-除了根结点外，每个结点有且仅有一个父结点；
+除了根节点外，每个结点有且仅有一个父节点；
 
-一棵N个结点的树有N-1条边
+一棵 `N` 个节点的树有 `N-1` 条边
 
 - 树的术语:
 
-1.结点的度（Degree）：结点的子树个数.
+  - 1. 节点的度（Degree）：节点的子树个数.
 
-2.树的度：树的所有结点中最大的度数. (树的度通常为结点的个数N-1)
+  - 2. 树的度：树的所有节点中最大的度数. (树的度通常为节点的个数 `N-1`)
 
-3.叶结点（Leaf）：度为0的结点. (也称为叶子结点)
+  - 3. 叶节点（Leaf）：度为 `0` 的节点. (也称为叶子节点)
 
-4.父结点（Parent）：有子树的结点是其子树的根结点的父结点
+  - 4. 父节点（Parent）：有子树的节点是其子树的根节点的父节点
 
-5.子结点（Child）：若A结点是B结点的父结点，则称B结点是A结点的子结点；子结点也称孩子结点。
+  - 5. 子节点（Child）：若 `A` 节点是 `B` 节点的父节点，则称 `B` 节点是 `A` 节点的子节点；子节点也称孩子节点。
 
-6.兄弟结点（Sibling）：具有同一父结点的各结点彼此是兄弟结点。
+  - 6. 兄弟节点（Sibling）：具有同一父节点的各节点彼此是兄弟节点。
 
-7.路径和路径长度：从结点n1到nk的路径为一个结点序列n1 , n2,… , nk, ni是 ni+1的父结点。路径所包含边的个数为路径的长度。
+  - 7. 路径和路径长度：从节点 `n1` 到 `nk` 的路径为一个节点序列 `n1 , n2,… , nk, ni` 是 `ni+1` 的父节点。路径所包含边的个数为路径的长度。
 
-8.结点的层次（Level）：规定根结点在1层，其它任一结点的层数是其父结点的层数加1。
+  - 8. 节点的层次（Level）：规定根节点在 `1` 层，其它任一节点的层数是其父节点的层数加 `1`。
 
-9.树的深度（Depth）：树中所有结点中的最大层次是这棵树的深度。
+  - 9. 树的深度（Depth）：树中所有节点中的最大层次是这棵树的深度。
 
 ## 二叉树的概念
 
+如果树中每个节点最多只能有两个子节点, 这样的树就成为"二叉树"。几乎上所有的树都可以表示成二叉树的形式。
+
 1. 二叉树的定义
 
-二叉树可以为空, 也就是没有结点.
+二叉树可以为空, 也就是没有节点.
 
-若不为空，则它是由根结点和称为其左子树TL和右子树TR的两个不相交的二叉树组成。
+若不为空，则它是由根节点和称为其左子树 TL 和右子树 TR 的两个不相交的二叉树组成。
 
-2. 二叉树的特性（笔试题）
+2. 二叉树的五种形态：空树、仅有根节点、只包含左子节点、只包含右子节、左右节点都存在
 
-一个二叉树第 `i` 层的最大结点数为：`2^(i-1), i >= 1`;
+3. 二叉树的特性（笔试题）
 
-深度为k的二叉树有最大结点总数为： `2^k - 1, k >= 1`;
+一个二叉树第 `i` 层的最大节点数为：`2^(i-1), i >= 1`;
 
-对任何非空二叉树 `T`，若 `n0` 表示叶结点的个数、`n2` 是度为 `2` 的非叶结点个数，那么两者满足关系 `n0 = n2 + 1`。
+深度为 k 的二叉树有最大节点总数为： `2^k - 1, k >= 1`;
 
-3. 特殊的二叉树
+对任何非空二叉树 `T`，若 `n0` 表示叶节点的个数、`n2` 是度为 `2` 的非叶节点个数，那么两者满足关系 `n0 = n2 + 1`。
 
-- 完美二叉树(Perfect Binary Tree) , 也称为满二叉树(Full Binary Tree）。在二叉树中, 除了最下一层的叶结点外, 每层节点都有2个子结点, 就构成了满二叉树
+4. 特殊的二叉树
+
+- 完美二叉树(Perfect Binary Tree) , 也称为满二叉树(Full Binary Tree）。在二叉树中, 除了最下一层的叶节点外, 每层节点都有 2 个子节点, 就构成了满二叉树
 
 - 完全二叉树
 
@@ -115,7 +120,7 @@
 
 完美二叉树是特殊的完全二叉树
 
-4. 二叉树的存储
+5. 二叉树的存储
 
 - 数组存储
 
@@ -125,4 +130,4 @@
 
 - 链表存储
 
-每个结点封装成一个Node, Node中包含存储的数据, 左结点的引用, 右结点的引用
+每个节点封装成一个 Node, Node 中包含存储的数据, 左节点的引用, 右节点的引用
