--- a/01. 编程基础/数据结构/树结构/03. 树的遍历.md
+++ b/01. 编程基础/数据结构/树结构/03. 树的遍历.md
@@ -1,5 +1,24 @@
-中序遍历
+## 中序遍历
 
-先序遍历
+① 访问根结点；
 
-后序遍历
+② 先序遍历其左子树；
+
+③ 先序遍历其右子树。
+
+## 先序遍历
+
+① 中序遍历其左子树；
+
+② 访问根结点；
+
+③ 中序遍历其右子树。
+
+## 后序遍历
+
+① 后序遍历其左子树；
+
+② 后序遍历其右子树；
+
+③ 访问根结点。
+
