08. 红黑树的插入操作

--- a/01. 编程基础/数据结构/树结构/08. 红黑树的插入操作.md
+++ b/01. 编程基础/数据结构/树结构/08. 红黑树的插入操作.md
@@ -31,10 +31,24 @@
 
 新插入节点 `N` 的父节点 `P` 是红色，其兄弟节点 `U` 为黑色节点，且 `N` 做左孩子。（新做左子父红叔黑祖黑）
 
-操作方案：父黑 => 祖黑 => 右旋转
+操作方案：
+
+1. 父黑
+
+2. 祖红
+
+3. `P` 和 `G` 右旋转，`P右` 做 `G左`
 
 ## 情况五
 
 新插入节点 `N` 的父节点 `P` 是红色，其兄弟节点 `U` 为黑色节点，且 `N` 做右孩子。（新做右子父红叔黑祖黑）
 
-操作方案：以 `P` 为轴左旋转 => 将 P 做为新插入的红色节点考虑（情况四）=> `N` 黑 `G` 红，以 `G` 为轴右旋转
+操作方案：
+
+1. `P` 和 `N` 左旋转
+
+2. 将 `P` 及其子节点做为新插入的红色节点考虑（情况四）
+
+3. `N` 黑 `G` 红
+
+4. `N` 和 `G` 右旋转，`N右` 做 `G左`
