--- a/01. 编程基础/数据结构/图结构/02. 图的遍历.md
+++ b/01. 编程基础/数据结构/图结构/02. 图的遍历.md
@@ -6,7 +6,31 @@
 
 - 深度优先搜索(Depth-First Search, 简称DFS)
 
-两种遍历算法, 都需要明确指定第一个被访问的顶点
+这两种遍历算法, 都需要明确指定第一个被访问的顶点
+
+3. 遍历的注意点:
+
+- 完全探索一个顶点要求查看该顶点的每一条边.
+
+- 对于每一条所连接的没有被访问过的顶点, 将其标注为被发现的, 并将其加进待访问顶点列表中.为了保证算法的效率: 每个顶点至多访问两次.
+
+4. 两种算法的思想:
+
+- BFS: 基于队列, 入队列的顶点先被探索.
+
+- DFS: 基于栈, 通过将顶点存入栈中, 顶点是沿着路径被探索的, 存在新的相邻顶点就去访问.
 
 
+5. 使用三种颜色来记录顶点是否被访问过的状态
+
+- 白色: 表示该顶点还没有被访问
+
+- 灰色: 表示该顶点被访问过, 但并未被探索过
+
+- 黑色: 表示该顶点被访问过且被完全探索过
+
+6. 广度优先搜索算法的思路:
+
+广度优先算法从指定的第一个顶点开始遍历图, 先访问其所有的相邻点, 就像一次访问图的一层.
+换句话说, 就是先宽后深的访问顶点
 
