--- a/02. 语法和API/ES语法/05. 异步编程/05. async和await.md
+++ b/02. 语法和API/ES语法/05. 异步编程/05. async和await.md
@@ -1,21 +1,20 @@
-## async 函数
+## `async` 函数
 
-执行函数，返回值为 promise 对象
+执行函数，返回值是一个状态为 `fuifilled` 的 `Promise` 对象，对象的结果由 `async` 函数执行的返回值 `return` 值决定，没有 `return` 返回 `undefined`
 
-promise 对象的结果由 async 函数执行的返回值决定
+## `await` 表达式
 
-## await 表达式
+`await` 右侧的表达式一般为 `promise` 对象，但也可以是其他值
 
-await 右侧的表达式一般为 promise 对象，但也可以是其他值
+如果表达式是 `promise` 对象，`await` 返回的是 `promise` 成功的值
 
-如果表达式是 promise 对象，await 返回的是  promise 成功的值
-
-如果表达式是其他值，直接将此值作为 await 的返回值
-
+如果表达式是其他值，直接将此值作为 `await` 的返回值
 
 ## 注意
 
-await 必须写在 async 函数中，但 async 函数中可以没有 await
+`async / await` 作用是用同步方式，执行异步操作
 
-如果 await 的  promise 失败了，就会抛出异常，需要通过 try...catch 来捕获处理
+`await` 必须写在 `async` 函数中，但 `async` 函数中可以没有 `await`
+
+如果 `await` 的 `promise` 失败了，就会抛出异常，需要通过 `try...catch` 来捕获处理
 
