--- a/02. 语法和API/ES语法/01. 原型与原型链.md
+++ b/02. 语法和API/ES语法/01. 原型与原型链.md
@@ -116,61 +116,16 @@ console.log( sym.constructor ); // ƒ Symbol() { [native code] }
 
 访问一个对象的属性时，先在其自身的基本属性中查找，如果没有，再沿着 `__proto__` 这条链向上找，通过 ` __proto__ ` 指针指向上一层构造函数的原型 ，并从中继承方法和属性，同时原型对象也可能拥有原型，这样一层一层，最终指向 `null`，这就是原型链。
 
-## 手写代码
+由` __proto__ ` 相互关联的原型组成的链状结构就是原型链。
 
-1. 用 `JS` 模拟 `new` 的过程
+![原型与原型链](./原型与原型链.png)
 
-```javaScript
-function _new(){
-  // 1、创建一个新对象
-  let target = {};
-  // 第一个参数是构造函数，后面的才是函数实际的参数
-  let [constructor, ...args] = [...arguments];  
+## null 究竟代表了什么
 
-  // 2、原型链连接
-  // target.__proto__ = constructor.prototype;
-  // 不建议使用 __proto__直接用 Object.create 实现
-  // 除了根对象Object.prototype本身之外，任何对象都会有一个原型。而通过Object.create( null )可以创建出没有原型的对象。
-  let target = Object.create(constructor.prototype);
+> null 表示“没有对象”，即该处不应该有值。—— 阮一峰[《undefined与null的区别》](http://www.ruanyifeng.com/blog/2014/03/undefined-vs-null.html)
 
-  // 3、this指向实例对象， 将构造函数的属性和方法添加到这个新的空对象上。
-  let result = constructor.apply(target, args);
+所以 `Object.prototype.__proto__` 的值为 `null` 跟 `Object.prototype` 没有原型，其实表达了一个意思。
 
-  // 5、如果构造函数返回的结果是一个对象，就返回这个对象
-  if(result && (typeof result == "object" || typeof result == "function")){
-    return result
-  }
-  // 如果构造函数返回的不是一个对象，就返回创建的新对象。
-  return target
+所以查找属性的时候查到 `Object.prototype` 就可以停止查找了。
 
-  // 如果有返回值且为对象类型，那么就返回结果，否则就返回 target
-  // return Object.prototype.toString.call(result) === '[object Object]' ? result : target;
-}
-
-
-var objectFactory = function(){
-  var obj = new Object(),    // 从Object.prototype上克隆一个空的对象
-  Constructor = [].shift.call( arguments );    // 取得外部传入的构造器，此例是Person
-  obj.__proto__ = Constructor.prototype;    // 指向正确的原型
-  var ret = Constructor.apply( obj, arguments );    // 借用外部传入的构造器给obj设置属性
-
-  return typeof ret === 'object' ? ret : obj;     // 确保构造器总是会返回一个对象
-};
-```
-
-2. instanceof 原理及实现
-
-```javaScript
-function instance_of(L, R) {//L 表示左表达式，R 表示右表达式
-   var O = R.prototype;// 取 R 的显示原型
-   L = L.__proto__;// 取 L 的隐式原型
-   while (true) { 
-       // Object.prototype.__proto__ === null
-       if (L === null) 
-         return false; 
-       if (O === L)// 这里重点：当 O 严格等于 L 时，返回 true 
-         return true; 
-       L = L.__proto__;
-   } 
-}
-```
+[深入探究 Function & Object 鸡蛋问题](https://www.muyiy.cn/blog/5/5.3.html)
