--- a/02. 语法和API/ES语法/05. 闭包.md
+++ b/02. 语法和API/ES语法/05. 闭包.md
@@ -1,16 +1,20 @@
-## 闭包
-
-> 闭包是指**有权访问另外一个函数作用域中的变量**的**函数**  ——  红宝书
+## 基本概念
 
 > 闭包是指那些能够访问自由变量的函数。  ——  MDN
 
+由此，可以看出闭包共有两部分组成：
+
+> 闭包 = 函数 + 函数能够访问的自由变量
+
 汤姆大叔翻译的关于闭包的文章中的定义，ECMAScript中，闭包指的是：
 
-  - 1.  从理论角度：所有的函数。因为它们都在创建的时候就将上层上下文的数据保存起来了。哪怕是简单的全局变量也是如此，因为函数中访问全局变量就相当于是在访问自由变量，这个时候使用最外层的作用域。
+  - 1.  从理论角度：所有的函数。因为它们都在创建的时候就将上层上下文的数据保存起来了。哪怕是简单的全局变量也是如此，因为函数中访问全局变量就相当于是在访问自由变量，这个时候使用最外层的作用域。所以所有的JavaScript函数都是闭包。
 
   - 2.  从实践角度：以下函数才算是闭包：
 
-  即使创建它的上下文已经销毁，它仍然存在（比如，内部函数从父函数中返回）在代码中引用了自由变量
+    - 即使创建它的上下文已经销毁，它仍然存在（比如，内部函数从父函数中返回）
+
+    - 在代码中引用了自由变量
 
 总结：
 
@@ -18,13 +22,17 @@
   
   - 能访问上级函数作用域中的变量（哪怕上级函数上下文已经销毁）
 
-闭包三特性：
+闭包函数 f 执行时，自由变量所在的上级函数 checkscope 已经销毁了，读取到上级函数作用域下的 scope 值呢？  
 
-  - 闭包可以访问当前函数以外的变量
+具体的执行过程后，f 执行上下文维护了一个作用域链：
 
-  - 即使外部函数已经返回，闭包仍能访问外部函数定义的变量
+```javaScript
+fContext = {
+    Scope: [AO, checkscopeContext.AO, globalContext.VO],
+}
+```
 
-  - 闭包可以更新外部变量的值
+就是因为这个作用域链，f 函数依然可以读取到 checkscopeContext.AO 的值，说明当 f 函数引用了 checkscopeContext.AO 中的值的时候，即使 checkscopeContext 被销毁了，但是 JavaScript 依然会让 checkscopeContext.AO 活在内存中，f 函数依然可以通过 f 函数的作用域链找到它，正是因为 JavaScript 做到了这一点，从而实现了闭包这个概念。
 
 应用的两种情况:
 
@@ -43,11 +51,34 @@ function fun(n,o) {
     }
   }
 }
-var a = fun(0); a.fun(1); a.fun(2); a.fun(3); // undefined,0,0,0
+var a = fun(0); // undefined
+a.fun(1); // 0
+a.fun(2); // 0
+a.fun(3); // 0
 var b = fun(0).fun(1).fun(2).fun(3); // undefined,0,1,2
-var c = fun(0).fun(1); c.fun(2); c.fun(3); // undefined,0,1,1
+var c = fun(0).fun(1); c.fun(2); // undefined,0,1
+c.fun(3); // 1
 ```
 
+```javaScript
+var data = [];
+
+for (var i = 0; i < 3; i++) {
+    (data[i] = function () {
+       console.log(arguments.callee.i) 
+    }).i = i;
+}
+
+data[0]();
+data[1]();
+data[2]();
+
+// 0
+// 1
+// 2
+```
+
+[JavaScript深入之闭包](https://github.com/mqyqingfeng/Blog/issues/9)
 
 ## 闭包的用途
 
@@ -164,5 +195,3 @@ function Person(){
     j.Say();
     alert(j.getName());
 ```
-
-
