--- a/02. 语法和API/ES语法/01. 原型与原型链.md
+++ b/02. 语法和API/ES语法/01. 原型与原型链.md
@@ -118,7 +118,7 @@ console.log( sym.constructor ); // ƒ Symbol() { [native code] }
 
 由` __proto__ ` 相互关联的原型组成的链状结构就是原型链。
 
-![原型与原型链](./原型与原型链.png)
+![原型与原型链](./images/原型与原型链.png)
 
 ## null 究竟代表了什么
 
