--- a/02. 语法和API/ES语法/06. 继承.md
+++ b/02. 语法和API/ES语法/06. 继承.md
@@ -30,7 +30,7 @@
   console.log(instance.getSuperValue()); // true
 ```
 
-![原型链继承](./原型链继承.webp)
+![原型链继承](./images/原型链继承.webp)
 
 - 优点：
 
@@ -147,7 +147,7 @@
   instance2.sayAge(); //27
 ```
 
-![组合继承](./组合继承.webp)
+![组合继承](./images/组合继承.webp)
 
 优点：
 
@@ -283,7 +283,7 @@
   instance1.colors.push("3"); // ["red", "blue", "green", "3"]
 ```
 
-![寄生组合式继承](./寄生组合式继承.webp)
+![寄生组合式继承](./images/寄生组合式继承.webp)
 
 这个例子的高效率体现在它只调用了一次 `SuperType` 构造函数，并且因此避免了在 `SubType.prototype` 上创建不必要的、多余的属性。于此同时，原型链还能保持不变；因此，还能够正常使用 `instanceof` 和 `isPrototypeOf()`。
 
