--- a/02. 语法和API/HTML/01. HTML语义化.md
+++ b/02. 语法和API/HTML/01. HTML语义化.md
@@ -9,7 +9,7 @@
 
 语义元素均有一个共同特点——他们均不做任何事情。换句话说，语义元素仅仅是页面结构的规范化，并不会对内容有本质的影响。
 
-[一个典型的页面结构](./page.png)
+[一个典型的页面结构](./images/page.png)
 
 ## 头部 header
 
