--- a/02. 语法和API/ES语法/异常处理.md
+++ b/02. 语法和API/ES语法/异常处理.md
@@ -1,31 +1,41 @@
-## try...catch
+一个健全的架构可以捕获所有同步、异步的异常。优雅的异常处理方式就像冒泡事件，任何元素可以自由拦截，也可以放任不管交给顶层处理。
 
-用一句话描述 JS 异常是否能被 try catch 到：
+## `try...catch`
 
-能捕捉到的异常，必须是线程执行已经进入 try catch 但 try catch 未执行完的时候抛出来的。
+用一句话描述 `JS` 异常是否能被 `try...catch` 到：
 
-try catch 执行之前，之中，之后的分析：
+**能捕捉到的异常，必须是线程执行已经进入 `try...catch` 但 `try...catch` 未执行完的时候抛出来的。**
+
+### `try...catch` 执行之前，之中，之后的分析：
 
 1. 之前
 
-代码报错的时候，线程执行未进入 try catch，那么无法捕捉异常。
+代码报错的时候，线程执行未进入 `try...catch`，那么无法捕捉异常。
 
-比如语法异常（syntaxError），因为语法异常是在语法检查阶段就报错了，线程执行尚未进入 try catch 代码块，自然就无法捕获到异常。
+比如语法异常（syntaxError），因为语法异常是在语法检查阶段就报错了，线程执行尚未进入 `try...catch` 代码块，自然就无法捕获到异常。
 
 2. 之中
 
-代码报错的时候，线程执行处于 try catch 之中，则能捕捉到异常。
+代码报错的时候，线程执行处于 `try...catch` 之中，则能捕捉到异常。
 
 3. 之后
 
-代码报错的时候，线程已经执行完 try catch，这种不能捕捉到异常。
+代码报错的时候，线程已经执行完 `try...catch`，这种不能捕捉到异常。
 
-总结：能被 try catch 捕捉到的异常，必须是在报错的时候，线程执行已经进入 try catch 代码块，且处在 try catch 里面，这个时候才能被捕捉到。
+总结：能被 `try...catch` 捕捉到的异常，必须是在报错的时候，线程执行已经进入 `try...catch` 代码块，且处在 `try...catch` 里面，这个时候才能被捕捉到。
 
-## Promise 没异常
+永远不要在 `macrotask` 队列中抛出异常，因为 `macrotask` 队列脱离了运行上下文环境，异常无法被当前作用域捕获。
 
-Promise 的异常都是由 reject 和 Promise.prototype.catch 来捕获，不管是同步还是异步。
+## `Promise` 异常
 
-核心原因是因为 Promise 在执行回调中都用 try catch 包裹起来了，其中所有的异常都被内部捕获到了，并未往上抛异常。
+`Promise` 的异常都是由 `reject` 和 `Promise.prototype.catch` 来捕获，不管是同步还是异步。
 
+核心原因是因为 `Promise` 在执行回调中都用 `try...catch` 包裹起来了，其中所有的异常都被内部捕获到了，并未往上抛异常。
 
+[精读《捕获所有异步 error》](https://github.com/ascoders/weekly/blob/master/%E5%89%8D%E6%B2%BF%E6%8A%80%E6%9C%AF/209.%E7%B2%BE%E8%AF%BB%E3%80%8A%E6%8D%95%E8%8E%B7%E6%89%80%E6%9C%89%E5%BC%82%E6%AD%A5%20error%E3%80%8B.md)
+
+[深入理解 JavaScript Errors 和 Stack Traces](https://zhuanlan.zhihu.com/p/25338849)
+
+[精读《JavaScript 错误堆栈处理》](https://github.com/ascoders/weekly/blob/master/%E5%89%8D%E6%B2%BF%E6%8A%80%E6%9C%AF/6.%E7%B2%BE%E8%AF%BB%E3%80%8AJavaScript%20%E9%94%99%E8%AF%AF%E5%A0%86%E6%A0%88%E5%A4%84%E7%90%86%E3%80%8B.md)
+
+[Callback Promise Generator Async-Await 和异常处理的演进](https://github.com/ascoders/blog/issues/14)
