--- a/02. 语法和API/JS Web API/07. 存储.md
+++ b/02. 语法和API/JS Web API/07. 存储.md
@@ -1,4 +1,4 @@
-[cookie、localStorage和sessionStorage 三者之间的区别以及存储、获取、删除等使用方式](https://juejin.cn/post/6844903516826255373)
+[cookie、localStorage 和 sessionStorage 三者之间的区别以及存储、获取、删除等使用方式](https://juejin.cn/post/6844903516826255373)
 
 [你真的了解 Cookie 和 Session 吗](https://juejin.cn/post/6844903842773991431)
 
@@ -6,9 +6,6 @@
 
 [傻傻分不清之 Cookie、Session、Token、JWT](https://juejin.cn/post/6844904034181070861)
 
-[localStorage、sessionStorage、cookie、session几种web数据存储方式对比总结](https://juejin.cn/post/6844903989096497159)
+[localStorage、sessionStorage、cookie、session 几种 web 数据存储方式对比总结](https://juejin.cn/post/6844903989096497159)
 
-
-
-
-
+[浏览器系列之 Cookie 和 SameSite 属性](https://github.com/mqyqingfeng/Blog/issues/157)
