--- a/01. 编程基础/数据结构/哈希表/01. 集合结构.md
+++ b/01. 编程基础/数据结构/哈希表/01. 集合结构.md
@@ -9,7 +9,7 @@
   - 在计算机中, 集合通常表示的结构中元素是不允许重复的.
 
 - 看成一种特殊的数组
-  
+
   - 其实集合你可以将它看成一种特殊的数组.
 
   - 特殊之处在于里面的元素没有顺序, 也不能重复.
@@ -29,6 +29,34 @@ class Traverse {
   constructor() {
     this.items = []
   }
+
+  static NaNSymbol = Symbol('NaN');
+
+  static encodeVal(value) {
+    return value !== value ? NaNSymbol : value;
+  }
+
+  static decodeVal(value) {
+    return (value === NaNSymbol) ? NaN : value;
+  }
+
+  static makeIterator(array, iterator) {
+    let nextIndex = 0;
+
+    let obj = {
+      next: function() {
+        return nextIndex < array.length ? { value: iterator(array[nextIndex++]), done: false } : { value: void 0, done: true };
+      }
+    };
+
+    // [...set.keys()] 会调用这里
+    obj[Symbol.iterator] = function() {
+      return obj
+    }
+
+    return obj
+  }
+
   // 返回键名的遍历器
   keys() {
     return this.items
@@ -36,12 +64,16 @@ class Traverse {
 
   // 返回键值的遍历器
   values() {
-    return this.items
+    return this.makeIterator(this._values, function(value) { 
+      return decodeVal(value); 
+    });
   }
 
   // 返回键值对的遍历器
   entries() {
-    return this.items.map(item => [item, item])
+    return makeIterator(this._values, function(value) { 
+      return [decodeVal(value), decodeVal(value)]; 
+    });
   }
 
   // 使用回调函数遍历每个成员
@@ -74,6 +106,7 @@ class Set extends Traverse {
 
   // 向集合中添加元素
   add(value) {
+    value = encodeVal(value);
     // 1.判断集合中是否已经包含了该元素
     if (this.has(value)) return false
 
@@ -88,13 +121,13 @@ class Set extends Traverse {
     if (!this.has(value)) return false
 
     // 2.包含该元素, 那么将元素删除
-    delete this.items[this.items.indexOf(value)]
+    delete this.items[this.items.indexOf((encodeVal(value)))]
     return true
   }
 
   // 判断集合中是否有某个元素
   has(value) {
-    return this.items.includes(value)
+    return this.items.includes(encodeVal(value))
   }
 
   // 清空集合中所有的元素
@@ -142,4 +175,3 @@ let difference = new Set([...a].filter(x => !b.has(x)));
 其次，`WeakSet` 中的对象都是弱引用，即垃圾回收机制不考虑 `WeakSet` 对该对象的引用，也就是说，如果其他对象都不再引用该对象，那么垃圾回收机制会自动回收该对象所占用的内存，不考虑该对象还存在于 `WeakSet` 之中。
 
 由于上面这个特点，`WeakSet` 的成员是不适合引用的，因为它会随时消失。另外，由于 `WeakSet` 内部有多少个成员，取决于垃圾回收机制有没有运行，运行前后很可能成员个数是不一样的，而垃圾回收机制何时运行是不可预测的，因此 ES6 规定 `WeakSet` 不可遍历。
-
