--- a/02. 语法和API/ES语法/08. 异步编程/09. async和await.md
+++ b/02. 语法和API/ES语法/08. 异步编程/09. async和await.md
@@ -18,4 +18,12 @@
 
 如果 `await` 的 `promise` 失败了，就会抛出异常，需要通过 `try...catch` 来捕获处理
 
+[async 函数](https://es6.ruanyifeng.com/#docs/async)
+
+[ES6 系列之我们来聊聊 Async](https://github.com/mqyqingfeng/Blog/issues/100)
+
+[ES6 系列之 Babel 将 Async 编译成了什么样子](https://github.com/mqyqingfeng/Blog/issues/103)
+
 [精读《AsyncAwait 优越之处》](https://github.com/ascoders/weekly/blob/master/%E5%89%8D%E6%B2%BF%E6%8A%80%E6%9C%AF/4.%E7%B2%BE%E8%AF%BB%E3%80%8AAsyncAwait%20%E4%BC%98%E8%B6%8A%E4%B9%8B%E5%A4%84%E3%80%8B.md)
+
+[精读《async await 是把双刃剑》](https://github.com/ascoders/weekly/blob/master/%E5%89%8D%E6%B2%BF%E6%8A%80%E6%9C%AF/55.%E7%B2%BE%E8%AF%BB%E3%80%8Aasync%20await%20%E6%98%AF%E6%8A%8A%E5%8F%8C%E5%88%83%E5%89%91%E3%80%8B.md)
