--- a/02. 语法和API/ES语法/08. 异步编程/08. Generator 的自动执行.md
+++ b/02. 语法和API/ES语法/08. 异步编程/08. Generator 的自动执行.md
@@ -96,7 +96,7 @@ run(gen);
 
 `yield` 后如果跟着的是一个回调函数同样利用递归 `run` 函数保证 `Generator` 的自动执行。
 
-## run
+## `run` 自动执行器
 
 `Generator` 函数的自动执行需要一种机制，即当异步操作有了结果，能够自动交回执行权。
 
